fix: halo position raised to 45% for better visibility

--- a/docs/style.css
+++ b/docs/style.css
@@ -587,7 +587,7 @@ a {
 
 .avatar-glow {
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 320px;
